@@ -34,9 +34,9 @@ case "$target_cpu" in
 	i?86)	 cpu=i386; AC_DEFINE(LIGHTNING_I386, 1,
 		   [Define if lightning is targeting the x86 architecture]) ;;
 	sparc*)	 cpu=sparc; AC_DEFINE(LIGHTNING_SPARC, 1,
-		   [Define if lightning is targeting the x86 architecture]) ;;
+		   [Define if lightning is targeting the SPARC architecture]) ;;
 	powerpc) cpu=ppc; AC_DEFINE(LIGHTNING_PPC, 1,
-		   [Define if lightning is targeting the x86 architecture]) ;;
+		   [Define if lightning is targeting the PowerPC architecture]) ;;
 	*)	 AC_MSG_ERROR([cpu $target_cpu not supported])	;;
 esac
 
